alignment-fixes

--- a/packages/robust/core/public/sass/modules/components/breadcrumbs.scss
+++ b/packages/robust/core/public/sass/modules/components/breadcrumbs.scss
@@ -66,7 +66,7 @@
         }
 
         .breadcrumbs {
-            padding-left: 20px;
+            padding-left:4px;
         }
 
         .breadcrumbs-btn {
