--- a/packages/robust/core/public/sass/modules/themes/style.scss
+++ b/packages/robust/core/public/sass/modules/themes/style.scss
@@ -1471,10 +1471,4 @@ textarea {
 input{
     font-size:14px !important;
 }
-.tabs .tab a:hover, .tabs .tab a.active {
-    background-color: #9c27b0;
-    color: #ffffff;
-}
-.tabs .indicator {
-    background-color: #9c27b0;
-}
+
